<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:checkableBehavior="single"
        android:id="@+id/groupe_jeu"
        >
        <item
            android:id="@+id/jeu_item"
            android:title="@string/sous_titre_jeu" />
        <item
            android:id="@+id/nav_accueil"
            android:icon="@drawable/ic_menu_accueil"
            android:title="@string/menu_accueil" />
        <item
            android:id="@+id/nav_stats"
            android:icon="@drawable/ic_menu_stats"
            android:title="@string/menu_stats" />
    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/groupe_credits">
        <item
            android:id="@+id/credit_item"
            android:title="@string/sous_titre_credits" />
        <item
            android:id="@+id/nav_credits"
            android:icon="@drawable/ic_menu_credits"
            android:title="@string/menu_credits" />
    </group>
</menu>