<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.jeu.JeuFragment">

    <RelativeLayout
        android:id="@+id/layout_pseudo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/pseudo_text"
            android:textAllCaps="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connecter"
            android:textSize="16sp"
            android:textAppearance="?attr/textAppearanceTitleMedium"
            />

        <TextView
            android:id="@+id/pseudo"
            android:textAllCaps="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Pseudo"
            android:layout_alignParentRight="true"
            android:textSize="16sp"
            android:textAppearance="?attr/textAppearanceTitleMedium"
            />
    </RelativeLayout>

    <TextView
        android:id="@+id/textView_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_pseudo"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:textColor="@color/md_theme_secondary"
        android:text="@string/message_jeu"
        android:textAppearance="?attr/textAppearanceTitleMedium"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView_sous_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_message"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/sous_message_jeu"
        android:textAppearance="?attr/textAppearanceBodyMedium"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_below="@+id/textView_sous_message"
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <TableLayout
            android:id="@+id/tableau_jeu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RelativeLayout
            android:id="@+id/boutons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/bouton_rejouer"
                style="@style/Widget.App.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/rejouer_partie"
                android:textAllCaps="true"
                android:layout_margin="15dp"
                android:textSize="12sp" />

            <Button
                android:id="@+id/bouton_valider"
                style="@style/Widget.App.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/bouton_rejouer"
                android:text="@string/valider_jeu"
                android:layout_margin="15dp"
                android:textAllCaps="true"
                android:textSize="12sp" />
        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>