<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.accueil.AccueilFragment">

    <ImageView
        android:id="@+id/image_accueil"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/image_maitre_de_l_esprit" />

    <RelativeLayout
        android:id="@+id/leaderboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_accueil"
        android:layout_margin="16dp">

        <TextView
            android:id="@+id/textView_name_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:lineHeight="50dp"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:textAppearance="?attr/textAppearanceTitleLarge"
            android:textColor="@color/md_theme_primary"
            android:textSize="50sp" />

        <TextView
            android:id="@+id/textView_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_name_app"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:textColor="@color/md_theme_secondary"
            android:text="@string/message_accueil"
            android:textAppearance="?attr/textAppearanceTitleMedium"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView_sous_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_message"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:ems="15"
            android:gravity="center"
            android:text="@string/sous_message_accueil"
            android:textAppearance="?attr/textAppearanceBodyMedium"
            android:textSize="14sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/field_pseudo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_sous_message"
            android:hint="Votre pseudo"
            app:startIconDrawable="@drawable/ic_baseline_account_box_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText_pseudo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/bouton_se_connecter"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/field_pseudo"
            android:textSize="18sp"
            android:textAllCaps="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="right"
            android:layout_margin="16dp"
            android:backgroundTint="@color/md_theme_secondaryContainer"
            android:textColor="@color/md_theme_onSecondaryContainer"
            android:enabled="false"
            android:text="@string/se_connecter" />

    </RelativeLayout>
</RelativeLayout>